# agentic-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.githooks/: pre-commit  (+1 more)
feinschliff/: README.md  pyproject.toml
feinschliff/.claude-plugin/: plugin.json
feinschliff/brands/binance/: catalog.json  tokens.json
feinschliff/brands/binance/catalog/: layouts.json
feinschliff/brands/bmw/: catalog.json  tokens.json
feinschliff/brands/bmw/catalog/: layouts.json
feinschliff/brands/claude/: catalog.json  tokens.json
feinschliff/brands/claude/catalog/: layouts.json
feinschliff/brands/feinschliff/: catalog.json  claude-design-prompt.md  tokens.json
feinschliff/brands/feinschliff/catalog/: layouts.json
feinschliff/brands/feinschliff/claude-design/: feinschliff-2026.html
feinschliff/brands/ferrari/: catalog.json  tokens.json
feinschliff/brands/ferrari/catalog/: layouts.json
feinschliff/brands/spotify/: catalog.json  tokens.json
feinschliff/brands/spotify/catalog/: layouts.json
feinschliff/cli/: brand.py  main.py
feinschliff/docs/: architecture.md
feinschliff/examples/: README.md
feinschliff/examples/binance/: README.md
feinschliff/examples/bmw/: README.md
feinschliff/examples/brief-to-deck/: brief.txt
feinschliff/examples/claude/: README.md
feinschliff/examples/design-md-to-tokens/: README.md
feinschliff/examples/feinschliff/: README.md
feinschliff/examples/ferrari/: README.md
feinschliff/examples/spotify/: README.md
feinschliff/feinschliff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
feinschliff/lib/: brand_discovery.py  cache.py  catalog.py  fetcher.py  pptx_fill.py  resolver.py
feinschliff/lib/diagram/: __init__.py  pipeline.py  validator.py
feinschliff/lib/schemas/: __init__.py  asset-entry.schema.json  catalog-v2.schema.json
feinschliff/references/: brand-pack-spec.md  claude-design-prompt.md  renderer-protocol.md
feinschliff/scripts/: extract_v2_template.py  port_brand.py  verify_v2_template.py
feinschliff/skills/compile/: SKILL.md
feinschliff/skills/deck/: SKILL.md
feinschliff/skills/extend/: SKILL.md
feinschliff/tests/: conftest.py  test_brand_discovery.py  test_cache.py  test_catalog.py  test_cli_brand.py  test_feinschliff_brand_pack.py  test_fetcher.py  test_integration_v2.py  test_pptx_fill.py  test_pptx_layouts_v2.py  test_resolver.py  test_schemas.py  test_skill_validator.py
(+482 files in other folders)
